# Remote_Employee_Burnout_Predictor

./: .gitignore  README.md  main.py  pyproject.toml  skills.md
app/: app.py
app/templates/: index.html
artifacts/scaling/: scaler.pkl
info/: added_columns.txt
notebook/: 1.check.ipynb  new_dataset.ipynb  vis.ipynb
src/datas/: fatigue_scorer.py  feature_engineering.py  loader.py  scaling.py
src/model/: evaluation.py  train.py  xgboost_model.py
src/pipeline/: model_training.py
