[project]
name = "remote-employee-burnout-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "shap>=0.45.0",      # Force a newer version to fix the llvmlite issue
    "numba>=0.60.0",     # Explicitly adding modern numba helps resolve dependencies
    "interpret>=0.6.0",
    "pyod>=2.0.0",
    "ipykernel>=6.29.0",
]